@@ -1,6 +1,7 @@
 Revision history for IO-Async-Loop-Epoll-FD
 
 {{$NEXT}}
+          - Handle fake-events in post_fork
 
 0.002     2024-01-27 20:42:22+01:00 Europe/Brussels
           - Correctly unwatch handlers
